--- a/helm/charts/admin-api/templates/admin-app.yaml
+++ b/helm/charts/admin-api/templates/admin-app.yaml
@@ -11,7 +11,7 @@ spec:
   project: default
   source:
     path: helm
-    repoURL: https://github.com/Do-lacna/webcloud
+    repoURL: git@github.com:Do-lacna/webcloud.git
     targetRevision: master
     helm:
       valueFiles:
