--- a/dev/Chart.yaml
+++ b/dev/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: admin-api
-description: Admin Api
+name: infrastructure-dev
+description: chart for dev apps
 type: application
 version: 1.0.0
 appVersion: 1.0.0
