--- a/dev/admin-api/.argocd-source-dolacna-init-admin-api-app.yaml
+++ b/dev/admin-api/.argocd-source-dolacna-init-admin-api-app.yaml
@@ -4,5 +4,5 @@ helm:
     value: offli/dolacna-admin-api
     forcestring: true
   - name: image.tag
-    value: 0.1.0-fb18264
+    value: 0.1.0-1
     forcestring: true
