--- a/dev/admin-api/values.yaml
+++ b/dev/admin-api/values.yaml
@@ -5,5 +5,6 @@ image:
   tag: "0.1.0-0"
   pullPolicy: IfNotPresent
 
-aspNetCoreEnv: "Production"
+# TODO change to Production and add override files
+aspNetCoreEnv: "Development"
 efMigrate: false
