feat(infra): add helmchart for infrastructure

--- a/infra/dev/Chart.yaml
+++ b/infra/dev/Chart.yaml
@@ -8,6 +8,6 @@ dependencies:
   - name: postgresql
     version: 13.2.5
     repository: https://charts.bitnami.com/bitnami
-  - name: minio
-    version: 14.3.0
-    repository: https://charts.bitnami.com/bitnami
+#  - name: minio
+#    version: 14.3.0
+#    repository: https://charts.bitnami.com/bitnami
