--- a/dev/admin-api/values.yaml
+++ b/dev/admin-api/values.yaml
@@ -7,7 +7,8 @@ image:
 
 # TODO do not include appsettings.{ENV} to k8s deployments - use empty appsettings and override everyting in config map. For that another env will be needed (to differ between ENV and appsettings)
 aspNetCoreEnv: "Development"
-publicKey: "myKey"
+issuer: "myKey"
+audience: "myKey"
 authenticationMode: "Disabled"
 # TODO back to false
 efMigrate: true
